src/lwpython/LexerX.cpp
/* Generated by re2c 0.13.6.dev on Fri Jan 04 13:30:00 2013 */
#line 1 "LexerX.re"
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#include "Lexer.h"

scanner_token *Lexer::scan() {

#define YYCTYPE char
#define YYCURSOR (this->cursor)
#define YYLIMIT (this->lim)
#define YYMARKER (this->marker)
#define	YYFILL(n) {fill();}

	for(;;) {
		capture_begin();
	
		
#line 22 "<stdout>"
{
	YYCTYPE yych;

	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy25;
	case '\t':
	case '\f':
	case ' ':	goto yy29;
	case '\n':
	case '\r':	goto yy27;
	case '(':	goto yy21;
	case ')':	goto yy23;
	case '*':	goto yy17;
	case '+':	goto yy13;
	case ',':	goto yy9;
	case '-':	goto yy15;
	case '.':	goto yy7;
	case '/':	goto yy19;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy5;
	case ':':	goto yy11;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy4;
	case 'd':	goto yy2;
	default:	goto yy31;
	}
yy2:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'e':	goto yy41;
	default:	goto yy40;
	}
yy3:
#line 29 "LexerX.re"
	{ return create_name_token(capture_string()); }
#line 117 "<stdout>"
yy4:
	yych = *++YYCURSOR;
	goto yy40;
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy38;
yy6:
#line 31 "LexerX.re"
	{ return create_int_token(capture_int()); }
#line 127 "<stdout>"
yy7:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	default:	goto yy8;
	}
yy8:
#line 57 "LexerX.re"
	{ 
			printf( "Unrecognized character: %c\n", *(this->ccursor) );
			continue;
		}
#line 149 "<stdout>"
yy9:
	++YYCURSOR;
#line 35 "LexerX.re"
	{ return create_token(TOKEN_COMMA); }
#line 154 "<stdout>"
yy11:
	++YYCURSOR;
#line 37 "LexerX.re"
	{ return create_token(TOKEN_COLON); }
#line 159 "<stdout>"
yy13:
	++YYCURSOR;
#line 39 "LexerX.re"
	{ return create_token(TOKEN_ADD); }
#line 164 "<stdout>"
yy15:
	++YYCURSOR;
#line 41 "LexerX.re"
	{ return create_token(TOKEN_SUB); }
#line 169 "<stdout>"
yy17:
	++YYCURSOR;
#line 43 "LexerX.re"
	{ return create_token(TOKEN_MUL); }
#line 174 "<stdout>"
yy19:
	++YYCURSOR;
#line 45 "LexerX.re"
	{ return create_token(TOKEN_DIV); }
#line 179 "<stdout>"
yy21:
	++YYCURSOR;
#line 47 "LexerX.re"
	{ return create_token(TOKEN_LPAREN); }
#line 184 "<stdout>"
yy23:
	++YYCURSOR;
#line 49 "LexerX.re"
	{ return create_token(TOKEN_RPAREN); }
#line 189 "<stdout>"
yy25:
	++YYCURSOR;
#line 51 "LexerX.re"
	{ return NULL; }
#line 194 "<stdout>"
yy27:
	++YYCURSOR;
#line 53 "LexerX.re"
	{ return emit_newline(); }
#line 199 "<stdout>"
yy29:
	++YYCURSOR;
#line 55 "LexerX.re"
	{ continue; }
#line 204 "<stdout>"
yy31:
	yych = *++YYCURSOR;
	goto yy8;
yy32:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	default:	goto yy34;
	}
yy34:
#line 33 "LexerX.re"
	{ return create_float_token(capture_float()); }
#line 228 "<stdout>"
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	default:	goto yy36;
	}
yy36:
	YYCURSOR = YYMARKER;
	goto yy6;
yy37:
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
yy38:
	switch (yych) {
	case '.':	goto yy35;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy37;
	default:	goto yy6;
	}
yy39:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy40:
	switch (yych) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy39;
	default:	goto yy3;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy42;
	default:	goto yy40;
	}
yy42:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy39;
	default:	goto yy43;
	}
yy43:
#line 27 "LexerX.re"
	{ return create_token(TOKEN_DEF); }
#line 392 "<stdout>"
}
#line 61 "LexerX.re"

	}
}
